# structest

./: README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml  tests.yaml  type-check.yaml
examples/incorrect_structure/tests/: __test_foo.py
structest/: __init__.py  __main__.py  cli.py  file_discovery.py  formatting.py  structest.py  validators.py
tests/: test_file_discovery.py
tests/e2e/: assertions.py  test_folder_at_the_root.py  test_folder_in_src.py  test_incorrect_structure.py
