[build-system]
requires = ["hatchling == 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "structest"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich==14.0.0",
]

[project.scripts]
structest = "structest:main"

[dependency-groups]
dev = [
    "ruff==0.12.2",
]

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]
