[build-system]
requires = ["hatchling == 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "structest"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer==0.16.0",
]

[project.scripts]
structest = "structest:app"

[dependency-groups]
dev = [
    "pyrefly==0.23.0",
    "pytest==8.4.1",
    "ruff==0.12.2",
]

[tool.uv]
add-bounds = "exact"

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
